[package]
name = "ctgen"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "^0"
tokio = { version = "^1", features = ["full"] }
log = "^0"
env_logger = "^0"
anyhow = "^1.0"
dotenvy = "^0"
clap = { version = "^4", features = ["derive"] }
dirs = "^5"
toml = { version = "^0", features = ["preserve_order"] }
regex = "^1"
indexmap = { version = "^2", features = ["serde"] }
serde_json = { version = "^1", features = ["preserve_order"] }
serde = { version = "^1", features = ["derive"] }
database-reflection = { version = "^0", features = ["mariadb"] }
sqlx = { version = "^0.6", features = ["runtime-tokio-rustls", "mysql"]}
handlebars = { version = "^5", features = ["dir_source", "script_helper"] }
handlebars-inflector = "^0.2.0"
handlebars-concat = "^0.2.0"
walkdir = "^2"
console = "^0.15"
dialoguer = { version = "^0.10", features = ["history"] }
indicatif = "^0.17"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"